--- a/naverApi/app/src/main/res/layout/activity_search.xml
+++ b/naverApi/app/src/main/res/layout/activity_search.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
+        <variable name="viewmodel" type="com.namget.naverapi.ui.search.SearchViewModel"></variable>
 
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -46,6 +47,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+                android:onClick="@{viewmodel::searchClick}"
                 android:background="@drawable/ripple_custom"
                 android:layout_marginTop="24dp"
                 app:layout_constraintTop_toBottomOf="@+id/searchMovieName"
