--- a/naverApi/app/src/main/res/layout/activity_search.xml
+++ b/naverApi/app/src/main/res/layout/activity_search.xml
@@ -35,7 +35,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/searchButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content">
             <com.google.android.material.textfield.TextInputEditText
@@ -44,14 +44,23 @@
                     android:singleLine="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
+            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:textColorHint="#555555"
+                    android:completionHint="검색어를 입력하세요"
+                    android:completionThreshold="2">
+            </androidx.appcompat.widget.AppCompatAutoCompleteTextView>
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+                android:id="@+id/searchButton"
                 android:onClick="@{viewmodel::searchClick}"
                 android:background="@drawable/ripple_custom"
-                android:layout_marginTop="24dp"
-                app:layout_constraintTop_toBottomOf="@+id/searchMovieName"
-                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/searchMovieName"
+                app:layout_constraintBottom_toBottomOf="@id/searchMovieName"
+                app:layout_constraintLeft_toRightOf="@id/searchMovieName"
                 app:layout_constraintRight_toRightOf="parent"
                 android:text="검색"
                 android:layout_width="wrap_content"
