--- a/naverApi/app/src/main/res/layout/activity_search.xml
+++ b/naverApi/app/src/main/res/layout/activity_search.xml
@@ -9,13 +9,15 @@
             android:layout_height="match_parent">
 
         <TextView
+                android:id="@+id/searchTitle"
                 android:textSize="20sp"
                 android:text="영화검색"
                 android:textColor="#000000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/searchPlzText"
                 app:layout_constraintRight_toRightOf="parent"/>
 
@@ -27,39 +29,46 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/searchMovieName"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/searchTitle"
                 app:layout_constraintRight_toRightOf="parent"/>
 
-        <com.google.android.material.textfield.TextInputLayout
+        <LinearLayout
                 android:id="@+id/searchMovieName"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/searchButton"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content">
-            <com.google.android.material.textfield.TextInputEditText
-                    android:layout_marginStart="24dp"
-                    android:layout_marginEnd="24dp"
-                    android:singleLine="true"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:textColorHint="#555555"
-                    android:completionHint="검색어를 입력하세요"
-                    android:completionThreshold="2">
-            </androidx.appcompat.widget.AppCompatAutoCompleteTextView>
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintTop_toTopOf="@+id/searchButton"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/searchButton">
 
-        </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+                        android:id="@+id/autoSearchView"
+                        android:onTextChanged="@{viewmodel::onContentTextChanged}"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColorHint="#555555"
+                        android:completionHint="검색어를 입력하세요"
+                        android:completionThreshold="2">
+                </androidx.appcompat.widget.AppCompatAutoCompleteTextView>
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+        </LinearLayout>
+
 
         <Button
                 android:id="@+id/searchButton"
                 android:onClick="@{viewmodel::searchClick}"
                 android:background="@drawable/ripple_custom"
-                app:layout_constraintTop_toTopOf="@+id/searchMovieName"
-                app:layout_constraintBottom_toBottomOf="@id/searchMovieName"
+                app:layout_constraintTop_toBottomOf="@+id/searchPlzText"
                 app:layout_constraintLeft_toRightOf="@id/searchMovieName"
                 app:layout_constraintRight_toRightOf="parent"
                 android:text="검색"
