- autoComplete textview 완성

--- a/naverApi/app/src/main/res/layout/item_search_auto_complete.xml
+++ b/naverApi/app/src/main/res/layout/item_search_auto_complete.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/listPreferredItemHeight">
     <TextView
             android:id="@+id/autoCompleteItem"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="24sp"
+            android:textColor="@android:color/primary_text_light"
+            android:layout_marginLeft="16dp"
             android:layout_width="match_parent"
-            android:layout_height="?android:attr/listPreferredItemHeight"
+            android:layout_height="wrap_content"
             android:singleLine="true"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
