--- a/naverApi/app/src/main/res/layout/activity_movielist.xml
+++ b/naverApi/app/src/main/res/layout/activity_movielist.xml
@@ -7,6 +7,7 @@
             android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/movieRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -16,6 +17,16 @@
 
         </androidx.recyclerview.widget.RecyclerView>
 
+
+        <TextView
+                android:id="@+id/movieNoResult"
+                android:text="검색된 영화 결과가 없습니다."
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
